--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,3 @@
 
 
-Model is pickled and tokenizers saved(we want to save the right matrices and values we got) and then used.
-Model.py is in Model directory 
+Django For UI, keras for model.
